Add new li on index.html

--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
       laboriosam molestias animi ullam maiores cupiditate. Aliquid dolor
       voluptates ad dolorem harum voluptatum doloremque!
     </p>
+    <ul>
+      <li class="reddit">hello</li>
+      <li class="reddit">hello</li>
+      <li class="reddit">hello</li>
+      <li class="reddit">hello</li>
+    </ul>
   </body>
 </html>
