--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git tutorial</title>
   </head>
   <body>
-    <h1>Git tutorial</h1>
+    <h1>Awesome Git tutorial</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga rem iusto
       nemo sit consequuntur. Voluptates ducimus officiis quod optio aliquid
