Add li in html file in task2 branch

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li class="reddit">hello</li>
       <li class="reddit">hello</li>
       <li class="reddit">hello</li>
+      <li class="reddit">hello</li>
     </ul>
   </body>
 </html>
